--- a/css/styles.css
+++ b/css/styles.css
@@ -16,3 +16,11 @@
     justify-content: flex-end;
     align-items: center;
 }
+.modal-header .modal-close-button {
+    cursor: pointer;
+    border: none;
+    outline: none;
+    background: none;
+    font-size: 1.25rem;
+    font-weight: bold;
+}
