Add styles to overlay id

--- a/css/styles.css
+++ b/css/styles.css
@@ -27,3 +27,12 @@
 .modal form {
     padding: 10px 15px;
 }
+#overlay {
+    position: fixed;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background-color: rgba(0, 0, 0, 0.5);
+    pointer-events: none;
+}
