--- a/css/styles.css
+++ b/css/styles.css
@@ -2,13 +2,16 @@
     position: fixed;
     top: 50%;
     left: 50%;
-    transform: translate(-50%, -50%);
+    transform: translate(-50%, -50%) scale(0);
     border: 1px solid black;
     border-radius: 10px;
     z-index: 10;
     background-color: white;
     width: 500px;
     max-width: 80%;
+}
+.modal.active {
+    transform: translate(-50%, -50%) scale(1);
 }
 .modal-header {
     display: flex;
